[package]
name = "factorio_verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "<=1.0.171"
base64 = "0.21.2"
bitflags = "2.4.1"
eframe = "0.24.1"
egui = "0.24.1"
egui-toast = "0.10.1"
egui_extras = { version = "0.24.2", features = ["all_loaders"]}
egui_file = "0.13.0"
fraction = "0.13.1"
graphviz-rust = "0.6.6"
inflate = "0.4.5"
num-bigint = "0.4.4"
petgraph = "0.6.4"
relations = "0.3.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_repr = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
z3 = "0.12.1"

[features]
build_z3 = ["z3/static-link-z3"]