[package]
name = "verifactory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.6"
bitflags = "2.4.1"
eframe = "0.25.0"
egui = "0.25.0"
egui-toast = "0.10.2"
egui_extras = { version = "0.25.0", features = ["all_loaders"]}
egui_file = "0.14.0"
fraction = "0.15.0"
graphviz-rust = "0.7.0"
inflate = "0.4.5"
num-bigint = "0.4.4"
petgraph = "0.6.4"
relations = "0.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_repr = "0.1.18"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
z3 = "0.12.1"
pest = "2.7.6"
pest_derive = "2.7.6"

[features]
build_z3 = ["z3/static-link-z3"]
