[workspace]
resolver = "2"
members = [ "verifactory_app", "verifactory_lib" ]

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
codegen-units = 1

[profile.dev]
opt-level = 1 # TODO: Is `opt-level = 0` fast enough?

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "verifactory"
