[package]
name = "verifactory_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bitflags = "2.10.0"
fraction = "0.15.3"
graphviz-rust = "0.9.6"
inflate = "0.4.5"
num-bigint = "0.4.6"
petgraph = "0.8.3"
relations = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
z3 = "0.19.5"

[features]
build_z3 = ["z3/static-link-z3"]
